[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.119.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "starlette[full]>=0.48.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
    "sphinx>=9.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "S101"]
"benchmarks/**/*.py" = ["F401", "S101", "S603", "S607"]
